Fix overflow scroll viewport

--- a/client/style/custom/map.import.less
+++ b/client/style/custom/map.import.less
@@ -22,13 +22,15 @@
   position: relative;
   .gradient {
     position: absolute;
-    height: 30vh;
+    height: 20vh;
     bottom: 0;
     left: 0;
     width: 100vw;
     pointer-events: none;
 
     background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(255, 255, 255, 0.75) 100%); /* Chrome10+,Safari5.1+ */
+
+    z-index: 9999;
   }
 }
 
@@ -53,7 +55,7 @@
 .map-list {
   overflow-y: scroll;
   height: 50vh;
-
+  border-top: 1px solid #E3E4DD;
   box-shadow: 0px -2px 5px 0px RGBA(0, 0, 0, 0.05);
 }
 
@@ -61,12 +63,12 @@
 
   background: #E3E4DD;
   background: white;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   list-style: none;
   margin: 0;
   padding: 0;
   padding: 0 1rem;
-  border-top: 1px solid #E3E4DD;
+
 
   // color: white;
   // padding: 2rem;
