--- a/client/style/custom/page.import.less
+++ b/client/style/custom/page.import.less
@@ -47,6 +47,7 @@
   height: ~"calc(100vh - 4rem)";
 
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 
   z-index: 3;
 
@@ -169,7 +170,7 @@
   }
 
 .page-comments {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
