--- a/client/style/malibu/structure/structure.import.less
+++ b/client/style/malibu/structure/structure.import.less
@@ -1,8 +1,9 @@
 #viewport {
   width: 100vw;
   height: 100vh;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  // overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+  // overflow-x: hidden;
 }
 
 //=======================================================
